--- a/web/app/index.html
+++ b/web/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>evelyn elaine valle</title>
     <meta name="author" content="Patrick Valle">
     <meta name="description" content="For my daughter, Evelyn">
     <meta name="viewport" content="width=device-width">
@@ -17,11 +17,12 @@
     <!-- endbuild -->
   </head>
   <body ng-app="evelynApp">
+
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+    <!-- Layout -->
     <div class="container">
       <div class="header">
         <h1 class="text-muted">evelyn elaine valle</h1>
@@ -65,6 +66,7 @@
     <script src="bower_components/momentjs/moment.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
     <!-- endbower -->
+    <script src="bower_components/spin.js/jquery.spin.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
