--- a/web/app/index.html
+++ b/web/app/index.html
@@ -10,6 +10,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -64,7 +65,6 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/momentjs/moment.js"></script>
-    <script src="bower_components/spin.js/spin.js"></script>
     <!-- endbower -->
     <script src="bower_components/spin.js/jquery.spin.js"></script>
     <!-- endbuild -->
