--- a/web/app/index.html
+++ b/web/app/index.html
@@ -65,15 +65,16 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/momentjs/moment.js"></script>
+    <script src="bower_components/unveil/jquery.unveil.js"></script>
     <!-- endbower -->
-    <script src="bower_components/spin.js/jquery.spin.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/PhotosController.js"></script>
+    <script src="scripts/directives/UnveilsAsDirective.js"></script>
     <script src="scripts/services/PhotosService.js"></script>
-    <script src="scripts/directives/spinner.js"></script>
+    <script src="scripts/controllers/PhotosController.js"></script>
+    
     <!-- endbuild -->
 </body>
 </html>
